--- a/src/assets/theme.css
+++ b/src/assets/theme.css
@@ -1,15 +1,41 @@
+@import "fds.css";
+
 :root.lightmode {
   --background: #f7f7f7;
+  --text: var(--black);
   --sidebar: #2f3641;
-  --header: #ffffff;
-  --btn-primary: #ed5656;
-  --btn-secondary: #ffffff;
+
+  /* Common */
+  --page-title: #7b6161;
+
+  /* Header */
+  --header: var(--white);
+  --header-search: var(--black);
+  --btn-primary: var(--coral);
+  --btn-secondary: var(--white);
+  --btn-secondary-text: var(--gray-600);
+
+  /* Movie */
+  --card-background: var(--white);
+  --card-text: var(--gray-800);
 }
 
 :root.darkmode {
-  --background: #181c40;
-  --sidebar: #27272a;
+  --background: var(--gray-900);
+  --text: var(--gray-200);
+  --sidebar: var(--gray-800);
+
+  /* Common */
+  --page-title: var(--gray-100);
+
+  /* Header */
   --header: #242427;
-  --btn-primary: #ed5656;
-  --btn-secondary: #71717a;
+  --header-search: var(--gray-100);
+  --btn-primary: var(--coral);
+  --btn-secondary: var(--gray-500);
+  --btn-secondary-text: var(--gray-50);
+
+  /* Movie */
+  --card-background: var(--gray-800);
+  --card-text: var(--gray-100);
 }
