--- a/src/assets/theme.css
+++ b/src/assets/theme.css
@@ -14,6 +14,7 @@
   --btn-primary: var(--coral);
   --btn-secondary: var(--white);
   --btn-secondary-text: var(--gray-600);
+  --btn-secondary-border: var(--gray-300);
 
   /* Movie */
   --card-background: var(--white);
@@ -32,8 +33,9 @@
   --header: #242427;
   --header-search: var(--gray-100);
   --btn-primary: var(--coral);
-  --btn-secondary: var(--gray-500);
+  --btn-secondary: var(--gray-700);
   --btn-secondary-text: var(--gray-50);
+  --btn-secondary-border: var(--gray-500);
 
   /* Movie */
   --card-background: var(--gray-800);
