--- a/src/assets/theme.css
+++ b/src/assets/theme.css
@@ -19,6 +19,14 @@
   /* Movie */
   --card-background: var(--white);
   --card-text: var(--gray-800);
+
+  /* Community */
+  --board-header: var(--gray-100);
+  --board-header-text: var(--gray-600);
+  --board-body: var(--gray-50);
+  --board-body-text: var(--gray-800);
+  --board-body-line: var(--gray-200);
+  --board-comment-cnt: var(--coral);
 }
 
 :root.darkmode {
@@ -40,4 +48,12 @@
   /* Movie */
   --card-background: var(--gray-800);
   --card-text: var(--gray-100);
+
+  /* Community */
+  --board-header: var(--gray-750);
+  --board-header-text: var(--gray-50);
+  --board-body: var(--gray-800);
+  --board-body-text: var(--gray-200);
+  --board-body-line: var(--gray-900);
+  --board-comment-cnt: var(--coral);
 }
