--- a/src/assets/theme.css
+++ b/src/assets/theme.css
@@ -23,7 +23,7 @@
   /* Community */
   --board-header: var(--gray-100);
   --board-header-text: var(--gray-600);
-  --board-body: var(--gray-50);
+  --board-body: var(--white);
   --board-body-text: var(--gray-800);
   --board-body-line: var(--gray-200);
   --board-comment-cnt: var(--coral);
