design: Set home page color properties

--- a/src/assets/theme.css
+++ b/src/assets/theme.css
@@ -39,6 +39,14 @@
   --profile-body: var(--gray-50);
   --profile-label: var(--gray-500);
   --profile-tag: var(--gray-100);
+
+  /* Recommend */
+  --recommend: var(--gray-50);
+  --recommend-title: #7b6161;
+  --recommend-text: var(--gray-500);
+  --recommend-boader: var(--gray-200);
+  --recommend-button: var(--white);
+  --recommend-button-border: var(--gray-300);
 }
 
 :root.darkmode {
@@ -80,4 +88,12 @@
   --profile-body: var(--gray-750);
   --profile-label: var(--gray-400);
   --profile-tag: var(--gray-700);
+
+  /* Recommend */
+  --recommend: var(--gray-800);
+  --recommend-title: var(--coral);
+  --recommend-text: var(--gray-400);
+  --recommend-boader: var(--gray-900);
+  --recommend-button: var(--gray-700);
+  --recommend-button-border: var(--gray-600);
 }
