--- a/src/assets/theme.css
+++ b/src/assets/theme.css
@@ -11,6 +11,7 @@
   --scroll-bar: var(--gray-300);
   --scroll-bar-hover: var(--gray-400);
   --star-gray: var(--gray-300);
+  --toast-border: var(--gray-300);
 
   /* Header */
   --header: var(--white);
@@ -52,7 +53,7 @@
   /* Recommend */
   --recommend: var(--white);
   --recommend-title: #7b6161;
-  --recommend-text: var(--gray-500);
+  --recommend-text: var(--gray-400);
   --recommend-border: var(--gray-200);
   --recommend-button: var(--white);
   --recommend-button-border: var(--gray-300);
@@ -73,6 +74,7 @@
   --scroll-bar: var(--gray-500);
   --scroll-bar-hover: var(--gray-400);
   --star-gray: var(--gray-600);
+  --toast-border: var(--gray-600);
 
   /* Header */
   --header: #242427;
